EXAME DE IA Algoritmos KNN y Costo

--- a/Tareas/IA/ExamenIAfinal.ipynb
+++ b/Tareas/IA/ExamenIAfinal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,11 +111,14 @@
     "    @staticmethod\n",
     "    def _EJECUTAR_A(tx,origen,destino):\n",
     "        #SE EJECUTA EL ALGORITMO A *\n",
-    "        result3 = tx.run(\"MATCH (start:Lugares {nombre:'HOTEL_MONTECARLO'}), (end:Lugares {nombre: 'RESTAURANTE_PAOLA'}) CALL gds.alpha.shortestPath.astar.stream({  nodeProjection: {    Lugares: {      properties: ['longitud', 'latitud']    }  },  relationshipProjection: {    CONNECTION: {      type: 'RUTA_DE',      orientation: 'UNDIRECTED',      properties: 'costo'    }  },  startNode: start,  endNode: end,  propertyKeyLat: 'latitud',  propertyKeyLon: 'longitud'}) YIELD nodeId, cost RETURN gds.util.asNode(nodeId).nombre AS lugares, cost\").data()\n",
-    "        for re in result3:\n",
-    "            print(\"valoes \",re)\n",
-    "            print(\"RESULTADO DE KNN\",re.get(\"Lugares1\"),re.get(\"Lugares2\"),re.get(\"similarity\"))      \n",
-    "        \n",
+    "#                 result3 = tx.run(\"MATCH (start:Lugares {nombre:'HOTEL_MONTECARLO'}), (end:Lugares {nombre: 'RESTAURANTE_PAOLA'}) CALL gds.alpha.shortestPath.astar.stream({  nodeProjection: {    Lugares: {      properties: ['longitud', 'latitud']    }  },  relationshipProjection: {    CONNECTION: {      type: 'RUTA_DE',      orientation: 'UNDIRECTED',      properties: 'costo'    }  },  startNode: start,  endNode: end,  propertyKeyLat: 'latitud',  propertyKeyLon: 'longitud'}) YIELD nodeId, cost RETURN gds.util.asNode(nodeId).nombre AS lugares, cost\").data()\n",
+    "        result3 = tx.run(\"MATCH (start:Lugares {nombre:'\"+origen+\"'}), (end:Lugares {nombre: '\"+destino+\"'}) CALL gds.alpha.shortestPath.astar.stream({  nodeProjection: {    Lugares: {      properties: ['longitud', 'latitud']    }  },  relationshipProjection: {    CONNECTION: {      type: 'RUTA_DE',      orientation: 'UNDIRECTED',      properties: 'costo'    }  },  startNode: start,  endNode: end,  propertyKeyLat: 'latitud',  propertyKeyLon: 'longitud'}) YIELD nodeId, cost RETURN gds.util.asNode(nodeId).nombre AS lugares,cost\").data()\n",
+    "        lista =[]\n",
+    "        for io in result3:\n",
+    "            print(io)\n",
+    "            var = str(io.get(\"lugares\"))+\"   :   \"+str(io.get(\"cost\"))\n",
+    "            lista.append(var)\n",
+    "        comboco[\"values\"]=lista\n",
     "            \n",
     "# CALL gds.graph.drop('graficoknn12')\n",
     "# MATCH (n) OPTIONAL MATCH (n)-[r]-() DELETE n,r\n",
@@ -125,52 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "valor de a es >  vacaciones\n",
-      "SE EJECUTA EL KNN PARA HOTELES vacaciones vacaciones\n",
-      "{'Lugares1': 'HOTEL_ACACIAS', 'Lugares2': 'HOTEL_INTERNACIONAL', 'infectados': 25, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_CHACARERO', 'Lugares2': 'HOTEL_PRIMAVERA', 'infectados': 6, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_DORADO', 'Lugares2': 'HOTEL_MONTECARLO', 'infectados': 10, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_ESTACION', 'Lugares2': 'HOTEL_ROCIO', 'infectados': 26, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_GABRIEL', 'Lugares2': 'HOTEL_MOLINO', 'infectados': 25, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_HUASI', 'Lugares2': 'HOTEL_SOL', 'infectados': 25, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_IMPERIAL', 'Lugares2': 'HOTEL_CHACARERO', 'infectados': 45, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_INTERNACIONAL', 'Lugares2': 'HOTEL_CHACARERO', 'infectados': 45, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_MAYA', 'Lugares2': 'HOTEL_CHACARERO', 'infectados': 45, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_MOLINO', 'Lugares2': 'HOTEL_GABRIEL', 'infectados': 30, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_MONTECARLO', 'Lugares2': 'HOTEL_TROJE', 'infectados': 45, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_PERUANA', 'Lugares2': 'HOTEL_ESTACION', 'infectados': 25, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_PRIMAVERA', 'Lugares2': 'HOTEL_MAYA', 'infectados': 21, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_RIOBAMBA', 'Lugares2': 'HOTEL_HUASI', 'infectados': 27, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_ROCIO', 'Lugares2': 'HOTEL_ESTACION', 'infectados': 25, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_SHALOM', 'Lugares2': 'HOTEL_MONTECARLO', 'infectados': 10, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_SOL', 'Lugares2': 'HOTEL_HUASI', 'infectados': 27, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_TORIL', 'Lugares2': 'HOTEL_SHALOM', 'infectados': 15, 'similarity': 1.0}\n",
-      "{'Lugares1': 'HOTEL_TROJE', 'Lugares2': 'HOTEL_SHALOM', 'infectados': 15, 'similarity': 1.0}\n",
-      "{'Lugares1': 'PARQUE_CENTRAL', 'Lugares2': 'HOTEL_INTERNACIONAL', 'infectados': 25, 'similarity': 1.0}\n",
-      "None\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\ADMINX\\anaconda3\\lib\\tkinter\\__init__.py\", line 1705, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"<ipython-input-3-3c79e8fcc7b8>\", line 23, in costo\n",
-      "    ori=origen\n",
-      "NameError: name 'origen' is not defined\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "import numpy as np\n",
@@ -278,8 +238,10 @@
     "dest = Entry(left_frame, bd =5)\n",
     "dest.place(relx=0.05, rely=0.85,relheight=0.03, relwidth=1)\n",
     "\n",
-    "#----------------------\n",
-    "\n",
+    "#----------------------COMPONENTE DEL JUEGO EL DERECHA FRAME----------\n",
+    "#LABELS\n",
+    "lbltit = Label(right_frame, text=\"JUEGO DE TIC-TAC-TOUR-19\", relief=RAISED )\n",
+    "lbltit.place(relx=0, rely=0,relheight=0.03, relwidth=1)\n",
     "\n",
     "\n",
     "#-----------------\n",
