EXAMEN IA Juego Interfaz

--- a/Tareas/IA/ExamenIAfinal.ipynb
+++ b/Tareas/IA/ExamenIAfinal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,64 +16,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
-    "from matplotlib.backends.backend_tkagg import FigureCanvasTkAgg\n",
-    "# def lanzardd():\n",
-    "#         print(\"SE EJECUTA EL LANZAR\")\n",
-    "# class TicTacToe(TwoPlayersGame):\n",
-    "#     \"\"\" The board positions are numbered as follows:\n",
-    "#             7 8 9\n",
-    "#             4 5 6\n",
-    "#             1 2 3\n",
-    "#     \"\"\"    \n",
-    "\n",
-    "#     def __init__(self, players):\n",
-    "#         self.players = players\n",
-    "#         self.board = [0 for i in range(9)]\n",
-    "#         self.nplayer = 0 # player 1 starts.\n",
-    "    \n",
-    "    \n",
-    "#     def possible_moves(self):\n",
-    "#         return [i+1 for i,e in enumerate(self.board) if e==0]\n",
-    "    \n",
-    "#     def make_move(self, move):\n",
-    "#         self.board[int(move)-1] = self.nplayer\n",
-    "\n",
-    "#     def unmake_move(self, move): # optional method (speeds up the AI)\n",
-    "#         self.board[int(move)-1] = 0\n",
-    "    \n",
-    "#     def lose(self):\n",
-    "#         \"\"\" Has the opponent \"three in line ?\" \"\"\"\n",
-    "#         return any( [all([(self.board[c-1]== self.nopponent)\n",
-    "#                       for c in line])\n",
-    "#                       for line in [[1,2,3],[4,5,6],[7,8,9], # horiz.\n",
-    "#                                    [1,4,7],[2,5,8],[3,6,9], # vertical\n",
-    "#                                    [1,5,9],[3,5,7]]]) # diagonal\n",
-    "        \n",
-    "#     def is_over(self):\n",
-    "#         return (self.possible_moves() == []) or self.lose()\n",
-    "        \n",
-    "#     def show(self):\n",
-    "#         lanzardd()\n",
-    "#         print ('\\n'+'\\n'.join([\n",
-    "#                         ' '.join([['.','O','X'][self.board[3*j+i]]\n",
-    "#                         for i in range(3)])\n",
-    "#                  for j in range(3)]) )\n",
-    "#         print(self.scoring())\n",
-    "                 \n",
-    "#     def scoring(self):\n",
-    "#         return -100 if self.lose() else 0\n",
-    "    \n",
-    "\n",
-    "# if __name__ == \"__main__\":\n",
-    "    \n",
-    "#     from easyAI import AI_Player, Negamax\n",
-    "#     ai_algo = Negamax(6)\n",
-    "#     TicTacToe( [Human_Player(),AI_Player(ai_algo)]).play()"
+    "from matplotlib.backends.backend_tkagg import FigureCanvasTkAgg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +77,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#<<<<<<<<<<<------------------EASYIA------------->>>>>>>>>>>\n",
+    "\n",
+    "def lanzardd():\n",
+    "        print(\"SE EJECUTA EL LANZAR\")\n",
+    "class TicTacToe(TwoPlayersGame):\n",
+    "    \"\"\" The board positions are numbered as follows:\n",
+    "            7 8 9\n",
+    "            4 5 6\n",
+    "            1 2 3\n",
+    "    \"\"\"    \n",
+    "\n",
+    "    def __init__(self, players):\n",
+    "        self.players = players\n",
+    "        self.board = [0 for i in range(9)]\n",
+    "        self.nplayer = 0 # player 1 starts.\n",
+    "    \n",
+    "    \n",
+    "    def possible_moves(self):\n",
+    "        return [i+1 for i,e in enumerate(self.board) if e==0]\n",
+    "    \n",
+    "    def make_move(self, move):\n",
+    "        self.board[int(move)-1] = self.nplayer\n",
+    "\n",
+    "    def unmake_move(self, move): # optional method (speeds up the AI)\n",
+    "        self.board[int(move)-1] = 0\n",
+    "    \n",
+    "    def lose(self):\n",
+    "        \"\"\" Has the opponent \"three in line ?\" \"\"\"\n",
+    "        return any( [all([(self.board[c-1]== self.nopponent)\n",
+    "                      for c in line])\n",
+    "                      for line in [[1,2,3],[4,5,6],[7,8,9], # horiz.\n",
+    "                                   [1,4,7],[2,5,8],[3,6,9], # vertical\n",
+    "                                   [1,5,9],[3,5,7]]]) # diagonal\n",
+    "        \n",
+    "    def is_over(self):\n",
+    "        return (self.possible_moves() == []) or self.lose()\n",
+    "        \n",
+    "    def show(self):\n",
+    "        lanzardd()\n",
+    "        print ('\\n'+'\\n'.join([\n",
+    "                        ' '.join([['.','O','X'][self.board[3*j+i]]\n",
+    "                        for i in range(3)])\n",
+    "                 for j in range(3)]) )\n",
+    "        print(self.scoring())\n",
+    "                 \n",
+    "    def scoring(self):\n",
+    "        return -100 if self.lose() else 0\n",
+    "    \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    from easyAI import AI_Player, Negamax\n",
+    "    ai_algo = Negamax(6)\n",
+    "    TicTacToe( [Human_Player(),AI_Player(ai_algo)]).play()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +227,7 @@
     "B1 =tk.Button(left_frame,text=\"BUSCAR\",background = \"orange\",command = validar)\n",
     "B1.place(relx=0.05, rely=0.45,relheight=0.06, relwidth=1)\n",
     "\n",
-    "B1 =tk.Button(left_frame,text=\"APLICAR ALGORITMO COSTO\",background = \"green\",command = costo)\n",
+    "B1 =tk.Button(left_frame,text=\"APLICAR ALGORITMO COSTO\",foreground = \"white\",background = \"green\",command = costo)\n",
     "B1.place(relx=0.05, rely=0.90,relheight=0.06, relwidth=1)\n",
     "\n",
     "#----COMBOBOX---------\n",
@@ -239,11 +249,98 @@
     "dest.place(relx=0.05, rely=0.85,relheight=0.03, relwidth=1)\n",
     "\n",
     "#----------------------COMPONENTE DEL JUEGO EL DERECHA FRAME----------\n",
-    "#LABELS\n",
+    "\n",
+    "#------------------LABELS\n",
     "lbltit = Label(right_frame, text=\"JUEGO DE TIC-TAC-TOUR-19\", relief=RAISED )\n",
     "lbltit.place(relx=0, rely=0,relheight=0.03, relwidth=1)\n",
     "\n",
+    "lblusu = Label(right_frame, text=\"Usuario\",foreground = \"red\", relief=RAISED )\n",
+    "lblusu.place(relx=0, rely=0.03,relheight=0.03, relwidth=0.5)\n",
     "\n",
+    "lbluia= Label(right_frame, text=\"IA usuario\",foreground = \"blue\", relief=RAISED )\n",
+    "lbluia.place(relx=0, rely=0.06,relheight=0.03, relwidth=0.5)\n",
+    "\n",
+    "\n",
+    "punt= Label(right_frame, text=\"PUNTAJE USUARIO\", foreground = \"green\",relief=RAISED )\n",
+    "punt.place(relx=0, rely=0.09,relheight=0.03, relwidth=0.5)\n",
+    "\n",
+    "#--- Botones ---\n",
+    "\n",
+    "lanza =tk.Button(right_frame,text=\"LANZAR DADO\",foreground = \"white\",background = \"blue\",command = validar)\n",
+    "lanza.place(relx=0.5, rely=0.12,relheight=0.06, relwidth=0.5)\n",
+    "\n",
+    "\n",
+    "#-----------------ENTRYS TEXTO\n",
+    "usun = Entry(right_frame, bd =5)\n",
+    "usun.place(relx=0.5, rely=0.03,relheight=0.03, relwidth=0.5)\n",
+    "\n",
+    "usuia = Entry(right_frame, bd =5)\n",
+    "usuia.place(relx=0.5, rely=0.06,relheight=0.03, relwidth=0.5)\n",
+    "\n",
+    "puntt = Entry(right_frame, bd =5)\n",
+    "puntt.place(relx=0.5, rely=0.09,relheight=0.03, relwidth=0.5)\n",
+    "\n",
+    "#-----------FRAME-JUEGO---->\n",
+    "\n",
+    "juego = tk.Frame(right_frame, bg='brown', bd=5)\n",
+    "juego.place(relx=0, rely=0.2, relheight=1,relwidth=1)\n",
+    "\n",
+    "#---TABLA DE LOS NODOS SEGUN SU NUMERO\n",
+    "#[0][i]\n",
+    "p0 = Entry(juego, bd =5)\n",
+    "p0.place(relx=0, rely=0.03,relheight=0.03, relwidth=0.2)\n",
+    "p01 = Entry(juego, bd =5)\n",
+    "p01.place(relx=0.2, rely=0.03,relheight=0.03, relwidth=0.2)\n",
+    "p02 = Entry(juego, bd =5)\n",
+    "p02.place(relx=0.4, rely=0.03,relheight=0.03, relwidth=0.2)\n",
+    "p03 = Entry(juego, bd =5)\n",
+    "p03.place(relx=0.6, rely=0.03,relheight=0.03, relwidth=0.2)\n",
+    "p04 = Entry(juego, bd =5)\n",
+    "p04.place(relx=0.8, rely=0.03,relheight=0.03, relwidth=0.2)\n",
+    "#[1][i]\n",
+    "p1 = Entry(juego, bd =5)\n",
+    "p1.place(relx=0, rely=0.06,relheight=0.03, relwidth=0.2)\n",
+    "p11 = Entry(juego, bd =5)\n",
+    "p11.place(relx=0.2, rely=0.06,relheight=0.03, relwidth=0.2)\n",
+    "p12 = Entry(juego, bd =5)\n",
+    "p12.place(relx=0.4, rely=0.06,relheight=0.03, relwidth=0.2)\n",
+    "p13 = Entry(juego, bd =5)\n",
+    "p13.place(relx=0.6, rely=0.06,relheight=0.03, relwidth=0.2)\n",
+    "p14 = Entry(juego, bd =5)\n",
+    "p14.place(relx=0.8, rely=0.06,relheight=0.03, relwidth=0.2)\n",
+    "#[2][i]\n",
+    "p2 = Entry(juego, bd =5)\n",
+    "p2.place(relx=0, rely=0.09,relheight=0.03, relwidth=0.2)\n",
+    "p21 = Entry(juego, bd =5)\n",
+    "p21.place(relx=0.2, rely=0.09,relheight=0.03, relwidth=0.2)\n",
+    "p22 = Entry(juego, bd =5)\n",
+    "p22.place(relx=0.4, rely=0.09,relheight=0.03, relwidth=0.2)\n",
+    "p23 = Entry(juego, bd =5)\n",
+    "p23.place(relx=0.6, rely=0.09,relheight=0.03, relwidth=0.2)\n",
+    "p24 = Entry(juego, bd =5)\n",
+    "p24.place(relx=0.8, rely=0.09,relheight=0.03, relwidth=0.2)\n",
+    "#[3][i]\n",
+    "p2 = Entry(juego, bd =5)\n",
+    "p2.place(relx=0, rely=0.12,relheight=0.03, relwidth=0.2)\n",
+    "p21 = Entry(juego, bd =5)\n",
+    "p21.place(relx=0.2, rely=0.12,relheight=0.03, relwidth=0.2)\n",
+    "p22 = Entry(juego, bd =5)\n",
+    "p22.place(relx=0.4, rely=0.12,relheight=0.03, relwidth=0.2)\n",
+    "p23 = Entry(juego, bd =5)\n",
+    "p23.place(relx=0.6, rely=0.12,relheight=0.03, relwidth=0.2)\n",
+    "p24 = Entry(juego, bd =5)\n",
+    "p24.place(relx=0.8, rely=0.12,relheight=0.03, relwidth=0.2)\n",
+    "#[4][i]\n",
+    "p2 = Entry(juego, bd =5)\n",
+    "p2.place(relx=0, rely=0.15,relheight=0.03, relwidth=0.2)\n",
+    "p21 = Entry(juego, bd =5)\n",
+    "p21.place(relx=0.2, rely=0.15,relheight=0.03, relwidth=0.2)\n",
+    "p22 = Entry(juego, bd =5)\n",
+    "p22.place(relx=0.4, rely=0.15,relheight=0.03, relwidth=0.2)\n",
+    "p23 = Entry(juego, bd =5)\n",
+    "p23.place(relx=0.6, rely=0.15,relheight=0.03, relwidth=0.2)\n",
+    "p24 = Entry(juego, bd =5)\n",
+    "p24.place(relx=0.8, rely=0.15,relheight=0.03, relwidth=0.2)\n",
     "#-----------------\n",
     "root.mainloop()"
    ]
